--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+cycler==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.2.1
 numpy==1.18.4
 opencv-python==4.2.0.34
 pandas==1.0.3
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.15.0
